added virtunes.html + some css

--- a/homepage.html
+++ b/homepage.html
@@ -9,13 +9,22 @@
     <title>Virtunes</title>
 </head>
 <body>
-    <header>
+
+    
         <header>
             <nav>
-                <div id="logo"><img src="./images/witLogo.svg" alt="Logo Virtunes wit"></div>
-                <a class="nav-links" href="#">My profile</a>
+                <div id="logo"><a href="homepage.html"><img src="./images/witLogo.svg" alt="Logo Virtunes wit"></a></div>
+                <a class="nav-links" href="virtunes.html">Who are we?</a>
             </nav>
         </header>
-    </header>
+
+    <section>
+        <h1 class="title">Welcome to Vir<span id="t">t</span><span id="u">u</span><span id="n">n</span><span id="e">e</span><span id="s">s</span>!</h1>
+        <p class="text">Immerse yourself in the magic of music right from your home.</p>
+        <p class="buttonText"><a href="#" class="button">Login</a> or <a href="#" class="button">join Virtunes</a> today!</p>
+        <canvas id="canvas1" class="hidden-sm hidden-xs" width="1263" height="890"></canvas>
+    </section>
+
+    
 </body>
 </html>
