--- a/login.html
+++ b/login.html
@@ -6,26 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./images/zwartIcon.svg">
     <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title>Virtunes</title>
 </head>
 <body>
 
-    
-        <header>
-            <nav>
-                <div id="logo"><a href="homepage.html"><img src="./images/witLogo.svg" alt="Logo Virtunes wit"></a></div>
-            </nav>
-        </header>
-
+    <div class="registerAndLoginScreen">
     <div class="registerAndLogin">
-        <h1 class="subTitle">Log in</h1>
+        <a href="homepage.html"><span class="material-symbols-outlined">arrow_back</span>Go back</p>
+        <h1 class="anotherTitle">Log in</h1>
         <form action="">
             <label for="username">Username</label>
-            <input type="text" name="username" id="username" placeholder="Username">
+            <input type="text" size="50" name="username" id="username" placeholder="...">
             <label for="password">Password</label>
-            <input type="password" name="password" id="password" placeholder="Password">
-            <input type="submit" value="Login" class="btn">
+            <input type="password" size="50" name="password" id="password" placeholder="...">
+            <a href="profile.html"><input type="submit" class="btn" value="Login"></a>
         </form>
+    </div>
+
+    <div class="image">
+        <img src="https://wallpapers.com/images/file/aesthetic-music-concert-and-crowd-q80rl8wtb227a8ls.jpg" alt="">
+    </div>
     </div>
 
 
