--- a/register.html
+++ b/register.html
@@ -6,16 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./images/zwartIcon.svg">
     <link rel="stylesheet" href="./css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title>Virtunes</title>
 </head>
 <body>
 
-    
-        <header>
-            <nav>
-                <div id="logo"><a href="homepage.html"><img src="./images/witLogo.svg" alt="Logo Virtunes wit"></a></div>
-            </nav>
-        </header>
+    <div class="registerAndLoginScreen">
+    <div class="registerAndLogin">
+        <a href="homepage.html"><span class="material-symbols-outlined">arrow_back</span>Go back</p>
+        <h1 class="anotherTitle">Register</h1>
+        <form action="">
+            <label for="username">First name</label>
+            <input type="text" size="50" name="username" id="username" placeholder="...">
+            <label for="username">Last name</label>
+            <input type="text" size="50" name="username" id="username" placeholder="...">
+            <label for="username">Email</label>
+            <input type="text" size="50" name="username" id="username" placeholder="...">
+            <label for="username">Email verification</label>
+            <input type="text" size="50" name="username" id="username" placeholder="...">
+            <label for="username">Username</label>
+            <input type="text" size="50" name="username" id="username" placeholder="...">
+            <label for="password">Password</label>
+            <input type="password" size="50" name="password" id="password" placeholder="...">
+            <a href="profile.html"><input type="submit" class="btn" value="Login"></a>
+        </form>
+    </div>
+
+    <div class="image">
+        <img src="https://wallpapers.com/images/file/aesthetic-music-concert-and-crowd-q80rl8wtb227a8ls.jpg" alt="">
+    </div>
+    </div>
+
 
     </body>
     </html>
