please LET THIS FIX THIS KFDNLKDSNFLKDFN ISSSSUEEEEEEE

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
         <header>
             <nav>
-                <div id="logo"><a href="homepage.html"><img src="./images/witLogo.svg" alt="Logo Virtunes wit"></a></div>
+                <div id="logo"><a href="index.html"><img src="./images/witLogo.svg" alt="Logo Virtunes wit"></a></div>
                 <a class="nav-links" href="virtunes.html">Who are we?</a>
             </nav>
         </header>
