--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
 
     <div class="registerAndLoginScreen">
     <div class="registerAndLogin">
-        <a href="homepage.html"><span class="material-symbols-outlined">arrow_back</span>Go back</p>
+        <a href="index.html"><span class="material-symbols-outlined">arrow_back</span>Go back</p>
         <h1 class="anotherTitle">Register</h1>
         <form action="">
             <label for="username">First name</label>
