fixed a lot of stuff, very happy

--- a/login.html
+++ b/login.html
@@ -9,23 +9,23 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title>Virtunes</title>
 </head>
-<body>
+<body id="login">
 
     <div class="registerAndLoginScreen">
     <div class="registerAndLogin">
-        <a href="index.html"><span class="material-symbols-outlined">arrow_back</span>Go back</p>
+        <a href="index.html"><span class="material-symbols-outlined">arrow_back</span>Go back</p></a>
         <h1 class="anotherTitle">Log in</h1>
         <form action="">
             <label for="username">Username</label>
             <input type="text" size="50" name="username" id="username" placeholder="...">
             <label for="password">Password</label>
             <input type="password" size="50" name="password" id="password" placeholder="...">
-            <a href="profile.html"><input type="submit" class="btn" value="Login"></a>
+            <a href="profile.html" class="btn">Login</a>
         </form>
     </div>
 
     <div class="image">
-        <img src="https://wallpapers.com/images/file/aesthetic-music-concert-and-crowd-q80rl8wtb227a8ls.jpg" alt="">
+        <img id="picture" src="https://wallpapers.com/images/file/aesthetic-music-concert-and-crowd-q80rl8wtb227a8ls.jpg" alt="">
     </div>
     </div>
 
