--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <title>Virtunes</title>
 </head>
 <body>
-
     
         <header>
             <nav>
@@ -19,6 +18,11 @@
         </header>
 
     <section>
+        <img id="yellow" class="blob" src="./images/blobgeel.svg" alt="blob1">
+        <img id="orange" class="blob" src="./images/bloboranje.svg" alt="blob2">
+        <img id="pink" class="blob" src="./images/blobpinku.svg" alt="blob3">
+        <img id="blue" class="blob" src="./images/blobblauw.svg" alt="blob4">
+        <img id="cyan" class="blob" src="./images/blobcyan.svg" alt="blob5">
         <h1 class="title">Welcome to Vir<span id="t">t</span><span id="u">u</span><span id="n">n</span><span id="e">e</span><span id="s">s</span>!</h1>
         <p class="text">Immerse yourself in the magic of <span id="t">m</span><span id="u">u</span><span id="n">s</span><span id="e">i</span><span id="s">c</span> right from your home.</p>
         <p class="buttonText"><a href="login.html" class="button">Login</a> or <a href="register.html" class="button">join Virtunes</a> today!</p>
