fixed login, image gone cuz Evi wanted it gone + added some things

--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
     <div class="registerAndLoginScreen">
     <div class="registerAndLogin">
-        <a href="index.html"><span class="material-symbols-outlined">arrow_back</span>Go back</p></a>
+        <a href="index.html"><span class="material-symbols-outlined">arrow_back</span></a><a id="goback" href="index.html">Go back</a>
         <h1 class="anotherTitle">Log in</h1>
         <form action="">
             <label for="username">Username</label>
@@ -22,10 +22,15 @@
             <input type="password" size="50" name="password" id="password" placeholder="...">
             <a href="profile.html" class="btn">Login</a>
         </form>
+        <a id="loginbuttons" href="profile.html"><div><img src="./images/ZW4QC.png" class="loginbuttons"></div><div><img src="./images/btn_google_signin_dark_normal_web@2x.png" class="loginbuttons"></div></a>
     </div>
 
     <div class="image">
-        <img id="picture" src="https://wallpapers.com/images/file/aesthetic-music-concert-and-crowd-q80rl8wtb227a8ls.jpg" alt="">
+        <img id="yellow2" class="blob" src="./images/blobgeel.svg" alt="blob1">
+        <img id="orange2" class="blob" src="./images/bloboranje.svg" alt="blob2">
+        <img id="pink2" class="blob" src="./images/blobpinku.svg" alt="blob3">
+        <img id="blue2" class="blob" src="./images/blobblauw.svg" alt="blob4">
+        <img id="cyan2" class="blob" src="./images/blobcyan.svg" alt="blob5">
     </div>
     </div>
 
