aanpassingen gemaakt aan het register scherm & profiel

--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title>Virtunes</title>
 </head>
-<body id="login">
+<body class="login">
 
     <div class="registerAndLoginScreen">
     <div class="registerAndLogin">
