--- a/profile.html
+++ b/profile.html
@@ -10,14 +10,29 @@
 </head>
 <body>
 
-    
     <header>
         <nav>
             <div id="logo"><a href="index.html"><img src="./images/witLogo.svg" alt="Logo Virtunes wit"></a></div>
-            <a class="nav-links" href="virtunes.html">Who are we?</a>
             <a class="nav-links" href="profile.html">Profile</a>
         </nav>
     </header>
+
+    <div>
+        <img src="./images/background.jpg" alt="Banner" class="banner">
+    </div>
+
+    <div>
+      <img src="./images/girl.png" alt="Avatar" class="profile-picture">
+        <div class="info">
+        <h2 class="full-name">Jill Vanderbeke</h1>
+        <h3 class="username">&#64;Jillvdb98</h2>
+        <p class="bio">
+            🎈 25 <br>
+            📍 Kessel-Lo, België 🇧🇪 <br>
+            🎵 Musicologie - KUL 
+        </p>
+        </div>
+    </div>
 
 </body>
 </html>
