--- a/register.html
+++ b/register.html
@@ -9,31 +9,37 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <title>Virtunes</title>
 </head>
-<body>
+<body class="login">
 
     <div class="registerAndLoginScreen">
-    <div class="registerAndLogin">
-        <a href="index.html"><span class="material-symbols-outlined">arrow_back</span>Go back</p>
+    <div id="register" class="registerAndLogin">
+        <a href="index.html"><span class="material-symbols-outlined">arrow_back</span></a><a id="goback" href="index.html">Go back</a>
         <h1 class="anotherTitle">Register</h1>
         <form action="">
-            <label for="username">First name</label>
-            <input type="text" size="50" name="username" id="username" placeholder="...">
-            <label for="username">Last name</label>
-            <input type="text" size="50" name="username" id="username" placeholder="...">
-            <label for="username">Email</label>
-            <input type="text" size="50" name="username" id="username" placeholder="...">
-            <label for="username">Email verification</label>
-            <input type="text" size="50" name="username" id="username" placeholder="...">
-            <label for="username">Username</label>
-            <input type="text" size="50" name="username" id="username" placeholder="...">
-            <label for="password">Password</label>
-            <input type="password" size="50" name="password" id="password" placeholder="...">
-            <a href="profile.html"><input type="submit" class="btn" value="Login"></a>
+            <div class="firstlastname">
+                <label for="firstname">First name</label>
+                <input type="text" size="50" name="firstname" id="firstname" placeholder="...">
+                <label for="lastname">Last name</label>
+                <input type="text" size="50" name="lastname" id="lastname" placeholder="...">
+            </div>
+                <label for="email">Email</label>
+                <input type="text" size="50" name="email" id="email" placeholder="...">
+                <label for="emailverif">Email verification</label>
+                <input type="text" size="50" name="emailverif" id="emailverif" placeholder="...">
+                <label for="username">Username</label>
+                <input type="text" size="50" name="username" id="username" placeholder="...">
+                <label for="password">Password</label>
+                <input type="password" size="50" name="password" id="password" placeholder="...">
+                <a href="profile.html" class="btn">Register</a>
         </form>
     </div>
 
     <div class="image">
-        <img src="https://wallpapers.com/images/file/aesthetic-music-concert-and-crowd-q80rl8wtb227a8ls.jpg" alt="">
+        <img id="yellow2" class="blob" src="./images/blobgeel.svg" alt="blob1">
+        <img id="orange2" class="blob" src="./images/bloboranje.svg" alt="blob2">
+        <img id="pink2" class="blob" src="./images/blobpinku.svg" alt="blob3">
+        <img id="blue2" class="blob" src="./images/blobblauw.svg" alt="blob4">
+        <img id="cyan2" class="blob" src="./images/blobcyan.svg" alt="blob5">
     </div>
     </div>
 
