--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,10 @@
     <header>
         <nav>
             <div id="logo"><a href="index.html"><img src="./images/witLogo.svg" alt="Logo Virtunes wit"></a></div>
-            <a class="nav-links" href="profile.html">Profile</a>
+            <div>
+            <a class="nav-links" href="profile.html">Concert calendar</a>
+            <a class="nav-links" href="profile.html">Settings</a>
+            </div>
         </nav>
     </header>
 
@@ -32,6 +35,10 @@
             🎵 Musicologie - KUL 
         </p>
         </div>
+    </div>
+
+    <div>
+        <a class="small-btn" href="#">Edit profile</a>
     </div>
 
 </body>
