--- a/register.html
+++ b/register.html
@@ -17,17 +17,23 @@
         <h1 class="anotherTitle">Register</h1>
         <form action="">
             <div class="firstlastname">
-                <label for="firstname">First name</label>
-                <input type="text" size="50" name="firstname" id="firstname" placeholder="...">
-                <label for="lastname">Last name</label>
-                <input type="text" size="50" name="lastname" id="lastname" placeholder="...">
+                <div id="firstlastname">
+                    <div>
+                        <label for="firstname">First name</label>
+                        <input type="text" size="50" name="firstname" id="firstname" placeholder="...">
+                    </div>
+                    <div>
+                        <label for="lastname">Last name</label>
+                        <input type="text" size="50" name="lastname" id="lastname" placeholder="...">
+                    </div>
+                </div>
             </div>
+                <label for="username">Username</label>
+                <input type="text" size="50" name="username" id="username" placeholder="...">
                 <label for="email">Email</label>
                 <input type="text" size="50" name="email" id="email" placeholder="...">
                 <label for="emailverif">Email verification</label>
                 <input type="text" size="50" name="emailverif" id="emailverif" placeholder="...">
-                <label for="username">Username</label>
-                <input type="text" size="50" name="username" id="username" placeholder="...">
                 <label for="password">Password</label>
                 <input type="password" size="50" name="password" id="password" placeholder="...">
                 <a href="profile.html" class="btn">Register</a>
