changed register and stuff

--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
             <input type="password" size="50" name="password" id="password" placeholder="...">
             <a href="profile.html" class="btn">Login</a>
         </form>
-        <a id="loginbuttons" href="profile.html"><div><img src="./images/ZW4QC.png" class="loginbuttons"></div><div><img src="./images/btn_google_signin_dark_normal_web@2x.png" class="loginbuttons"></div></a>
+        <a id="loginbuttons" href="profile.html"><div><img src="./images/facebook.svg" class="facebook" id="loginbuttons1"></div><div><img src="./images/google.svg" class="google" id="loginbuttons1"></div></a>
     </div>
 
     <div class="image">
