--- a/register.html
+++ b/register.html
@@ -39,6 +39,7 @@
                 <a href="profile.html" class="btn">Register</a>
         </form>
     </div>
+    <a id="loginbuttons2" href="profile.html"><div><img src="./images/facebook.svg" class="facebook" id="loginbuttons1"></div><div><img src="./images/google.svg" class="google" id="loginbuttons1"></div></a>
 
     <div class="image">
         <img id="yellow2" class="blob" src="./images/blobgeel.svg" alt="blob1">
