--- a/virtunes.html
+++ b/virtunes.html
@@ -8,22 +8,35 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>Virtunes</title>
 </head>
-<body>
+<body class="login">
 
     
     <header>
         <nav>
             <div id="logo"><a href="index.html"><img src="./images/witLogo.svg" alt="Logo Virtunes wit"></a></div>
-            <a class="nav-links" href="virtunes.html">Who are we?</a>
+            <div>
+            <a class="nav-links" href="index.html">Home</a>
+            <a class="nav-links" href="login.html">Login</a>
+            <a class="nav-links" href="register.html">Register</a>
+            </div>
         </nav>
     </header>
 
 
     <section>
         <h1 class="subTitle">Who are we?</h1>
-        <p class="subText">A web application where music lovers can go to concerts in a virtual way. Sounds pretty broad maybe or maybe you can't picture it, but at Virtunes it can be done. There are plenty of matters that might make going to concerts challenging for some, which is why we want to start making it easier.</p>
-        <p class="subText">Our mission is to provide music lovers around the world with a unique and immersive virtual concert experience. Through our platform, artists can record exclusive performances in a state-of-the-art virtual concert hall and fans can watch these performances on-demand from the comfort of their own homes.</p>
+        <h2 class="subsubText">Virtunes was founded by two students for a project, but in reality, we took it quite seriously. Both of us are music enthusiasts and enjoy going to concerts, which is why this product is very dear to us.</h2>
+        <p class="subText">Our mission is to provide music lovers worldwide with a unique and immersive virtual concert experience. Through our platform, artists have the opportunity to record exclusive performances in a state-of-the-art virtual concert hall, while fans can enjoy these performances on demand from the comfort of their own homes.</p>
+        <p class="subText">We strive to create a sense of community and exclusivity by offering these performances exclusively through our platform. For those looking to enhance their experience, we provide various options such as selecting their position in the venue and adjusting their viewing and listening preferences. We prioritize delivering high-quality audio and video production, so that our audience feels as if they are truly present in the concert hall.</p>
+        <p class="subText">Furthermore, we recognize the value of capturing these performances for future enjoyment. Therefore, we offer users the option to purchase a small video of the performance, which can be rewatched at any time.</p>
+        <p class="subText">Our goal is to bring artists and music lovers together in a unique and exciting way, promoting a love for music and creating unforgettable memories that last a lifetime.</p>
     </section>
+
+    <img id="yellow3" class="blob" src="./images/blobgeel.svg" alt="blob1">
+    <img id="orange3" class="blob" src="./images/bloboranje.svg" alt="blob2">
+    <img id="pink3" class="blob" src="./images/blobpinku.svg" alt="blob3">
+    <img id="blue3" class="blob" src="./images/blobblauw.svg" alt="blob4">
+    <img id="cyan3" class="blob" src="./images/blobcyan.svg" alt="blob5">
 
 </body>
 </html>
