--- a/calendar.html
+++ b/calendar.html
@@ -33,343 +33,343 @@ document.addEventListener('DOMContentLoaded', function() {
       end: '2023-05-31',
       title: 'Ed Sheeran',
       display: 'background',
-      url: '/artistspages/edsheeranpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/edsheeranpage.html'
     },
     {
       start: '2023-06-01',
       end: '2023-06-01',
       title: 'LAUV',
       display: 'background',
-      url: '/artistspages/lauvpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/lauvpage.html'
     },
     {
       start: '2023-06-03',
       end: '2023-06-03',
       title: 'PRETTYMUCH',
       display: 'background',
-      url: '/artistspages/prettymuchpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/prettymuchpage.html'
     },
     {
       start: '2023-06-12',
       end: '2023-06-12',
       title: 'Adele',
       display: 'background',
-      url: '/artistspages/adelepage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/adelepage.html'
     },
     {
       start: '2023-06-16',
       end: '2023-06-16',
       title: 'JVKE',
       display: 'background',
-      url: '/artistspages/jvkepage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/jvkepage.html'
     },
     {
       start: '2023-06-24',
       end: '2023-06-24',
       title: 'Newjeans',
       display: 'background',
-      url: '/artistspages/newjeanspage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/newjeanspage.html'
     },
     {
       start: '2023-06-04',
       end: '2023-06-04',
       title: 'Ashnikko',
       display: 'background',
-      url: '/artistspages/ashnikkopage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/ashnikkopage.html'
     },
     {
       start: '2023-06-28',
       end: '2023-06-28',
       title: 'BTS',
       display: 'background',
-      url: '/artistspages/btspage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/btspage.html'
     },
     {
       start: '2023-06-06',
       end: '2023-06-06',
       title: 'Ice Spice',
       display: 'background',
-      url: '/artistspages/icespicepage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/icespicepage.html'
     },
     {
       start: '2023-06-15',
       end: '2023-06-15',
       title: 'Lewis Capaldi',
       display: 'background',
-      url: '/artistspages/lewiscapaldipage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/lewiscapaldipage.html'
     },
     {
       start: '2023-06-27',
       end: '2023-06-27',
       title: 'Labrinth',
       display: 'background',
-      url: '/artistspages/labrinthpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/labrinthpage.html'
     },
     {
       start: '2023-06-30',
       end: '2023-06-30',
       title: 'Anne Marie',
       display: 'background',
-      url: '/artistspages/annemariepage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/annemariepage.html'
     },
     {
       start: '2023-07-30',
       end: '2023-07-02',
       title: 'Ariana Grande',
       display: 'background',
-      url: '/artistspages/arianagrandepage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/arianagrandepage.html'
     },
     {
       start: '2023-07-01',
       end: '2023-07-01',
       title: 'Beyonce',
       display: 'background',
-      url: '/artistspages/beyoncepage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/beyoncepage.html'
     },
     {
       start: '2023-07-04',
       end: '2023-07-04',
       title: 'Billie Eilish',
       display: 'background',
-      url: '/artistspages/billieeilishpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/billieeilishpage.html'
     },
     {
       start: '2023-07-10',
       end: '2023-07-10',
       title: 'Bryan Adams',
       display: 'background',
-      url: '/artistspages/bryanadamspage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/bryanadamspage.html'
     },
     {
       start: '2023-07-12',
       end: '2023-07-12',
       title: 'Calvin Harris',
       display: 'background',
-      url: '/artistspages/calvinharrispage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/calvinharrispage.html'
     },
     {
       start: '2023-07-15',
       end: '2023-07-15',
       title: 'Charlie Puth',
       display: 'background',
-      url: '/artistspages/charlieputhpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/charlieputhpage.html'
     },
     {
       start: '2023-07-17',
       end: '2023-07-17',
       title: 'Disclosure',
       display: 'background',
-      url: '/artistspages/disclosurepage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/disclosurepage.html'
     },
     {
       start: '2023-07-19',
       end: '2023-07-19',
       title: 'Doja Cat',
       display: 'background',
-      url: '/artistspages/dojacatpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/dojacatpage.html'
     },
     {
       start: '2023-07-21',
       end: '2023-07-21',
       title: 'Dove Cameron',
       display: 'background',
-      url: '/artistspages/dovecameronpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/dovecameronpage.html'
     },
     {
       start: '2023-07-25',
       end: '2023-07-25',
       title: 'Dua Lipa',
       display: 'background',
-      url: '/artistspages/dualipapage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/dualipapage.html'
     },
     {
       start: '2023-07-28',
       end: '2023-07-28',
       title: 'Ellie Goulding',
       display: 'background',
-      url: '/artistspages/elliegouldingpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/elliegouldingpage.html'
     },
     {
       start: '2023-08-03',
       end: '2023-08-03',
       title: 'Flume',
       display: 'background',
-      url: '/artistspages/flumepage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/flumepage.html'
     },
     {
       start: '2023-08-07',
       end: '2023-08-07',
       title: 'Halsey',
       display: 'background',
-      url: '/artistspages/halseypage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/halseypage.html'
     },
     {
       start: '2023-08-10',
       end: '2023-08-10',
       title: 'Harry Styles',
       display: 'background',
-      url: '/artistspages/harrystylespage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/harrystylespage.html'
     },
     {
       start: '2023-08-14',
       end: '2023-08-14',
       title: 'Imagine Dragons',
       display: 'background',
-      url: '/artistspages/imaginedragonspage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/imaginedragonspage.html'
     },
     {
       start: '2023-08-17',
       end: '2023-08-17',
       title: 'Jackson Wang',
       display: 'background',
-      url: '/artistspages/jacksonwangpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/jacksonwangpage.html'
     },
     {
       start: '2023-08-21',
       end: '2023-08-21',
       title: 'Joji',
       display: 'background',
-      url: '/artistspages/jojipage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/jojipage.html'
     },
     {
       start: '2023-08-24',
       end: '2023-08-24',
       title: 'Jonas Brothers',
       display: 'background',
-      url: '/artistspages/jonasbrotherspage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/jonasbrotherspage.html'
     },
     {
       start: '2023-08-28',
       end: '2023-08-28',
       title: 'KAYTRANADA',
       display: 'background',
-      url: '/artistspages/kaytranadapage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/kaytranadapage.html'
     },
     {
       start: '2023-09-03',
       end: '2023-09-03',
       title: 'Keiynan Lonsdale',
       display: 'background',
-      url: '/artistspages/keiynanlonsdalepage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/keiynanlonsdalepage.html'
     },
     {
       start: '2023-09-07',
       end: '2023-09-07',
       title: 'Lil Nas X',
       display: 'background',
-      url: '/artistspages/lilnasxpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/lilnasxpage.html'
     },
   {
       start: '2023-09-11',
       end: '2023-09-11',
       title: 'Lizzo',
       display: 'background',
-      url: '/artistspages/lizzopage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/lizzopage.html'
     },
     {
       start: '2023-09-15',
       end: '2023-09-15',
       title: 'Lost Frequencies',
       display: 'background',
-      url: '/artistspages/lostfrequenciespage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/lostfrequenciespage.html'
     },
     {
       start: '2023-09-19',
       end: '2023-09-19',
       title: 'Madison Beer',
       display: 'background',
-      url: '/artistspages/madisonbeerpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/madisonbeerpage.html'
     },
     {
       start: '2023-09-23',
       end: '2023-09-23',
       title: 'Megan Thee Stallion',
       display: 'background',
-      url: '/artistspages/mtspage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/mtspage.html'
     },
     {
       start: '2023-09-23',
       end: '2023-09-23',
       title: 'Machine Gun Kelly',
       display: 'background',
-      url: '/artistspages/mgkpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/mgkpage.html'
     },
     {
       start: '2023-09-30',
       end: '2023-09-30',
       title: 'NF',
       display: 'background',
-      url: '/artistspages/nfpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/nfpage.html'
     },
     {
       start: '2023-10-05',
       end: '2023-10-05',
       title: 'Pitbull',
       display: 'background',
-      url: '/artistspages/pitbullpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/pitbullpage.html'
     },
     {
       start: '2023-10-09',
       end: '2023-10-09',
       title: 'Post Malone',
       display: 'background',
-      url: '/artistspages/postmalonepage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/postmalonepage.html'
     },
     {
       start: '2023-10-12',
       end: '2023-10-12',
       title: 'Rihanna',
       display: 'background',
-      url: '/artistspages/rihannapage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/rihannapage.html'
     },
     {
       start: '2023-10-16',
       end: '2023-10-16',
       title: 'Sam Smith',
       display: 'background',
-      url: '/artistspages/samsmithpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/samsmithpage.html'
     },
     {
       start: '2023-10-19',
       end: '2023-10-19',
       title: 'Selena Gomez',
       display: 'background',
-      url: '/artistspages/selenagomezpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/selenagomezpage.html'
     },
     {
       start: '2023-10-23',
       end: '2023-10-23',
       title: 'Shawn Mendes',
       display: 'background',
-      url: '/artistspages/shawnmendespage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/shawnmendespage.html'
     },
     {
       start: '2023-10-27',
       end: '2023-10-27',
       title: 'Stray Kids',
       display: 'background',
-      url: '/artistspages/straykidspage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/straykidspage.html'
     },
     {
       start: '2023-10-30',
       end: '2023-10-30',
       title: 'The Weeknd',
       display: 'background',
-      url: '/artistspages/theweekndpage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/theweekndpage.html'
     },
     {
       start: '2023-11-05',
       end: '2023-11-05',
       title: 'The Kid LAROI',
       display: 'background',
-      url: '/artistspages/thekidlaroipage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/thekidlaroipage.html'
     },
     {
       start: '2023-11-09',
       end: '2023-11-09',
       title: 'SZA',
       display: 'background',
-      url: '/artistspages/szapage.html'
+      url: 'https://nvnchi.github.io/Virtunes/artistspages/szapage.html'
     },
     ]
   });
