--- a/profile.html
+++ b/profile.html
@@ -50,28 +50,28 @@
         <div class="ticket">
             <img class="ticketImage" src="./images/Artists/EdSheeran.jpg" alt="Picture of Ed Sheeran">
                 <div class="ticketInfo">
-                    <a href="/artistspages/edsheeran.html"><h2 class="ticketText">Ed Sheeran</h2></a>
+                    <a href="https://nvnchi.github.io/Virtunes/artistspages/edsheeran.html"><h2 class="ticketText">Ed Sheeran</h2></a>
                     <p class="ticketText">31/05/2023 at 2 pm.</p>
                 </div>
         </div>
         <div class="ticket">
             <img class="ticketImage" src="./images/Artists/Lauv.jpg" alt="Picture of LAUV">
                 <div class="ticketInfo">
-                    <a href="/artistspages/lauv.html"><h2 class="ticketText">LAUV</h2></a>
+                    <a href="https://nvnchi.github.io/Virtunes/artistspages/lauv.html"><h2 class="ticketText">LAUV</h2></a>
                     <p class="ticketText">01/06/2023 at 10 am.</p>
                 </div>
         </div>
         <div class="ticket">
             <img class="ticketImage" src="./images/Artists/PRETTYMUCH.jpg" alt="Picture of PRETTYMUCH">
                 <div class="ticketInfo">
-                    <a href="/artistspages/prettymuch.html"><h2 class="ticketText">PRETTYMUCH</h2></a>
+                    <a href="https://nvnchi.github.io/Virtunes/artistspages/prettymuch.html"><h2 class="ticketText">PRETTYMUCH</h2></a>
                     <p class="ticketText">03/06/2023 at 11 pm.</p>
                 </div>
         </div>
         <div class="ticket">
             <img class="ticketImage" src="./images/Artists/Adele.jpg" alt="Picture of Adele">
                 <div class="ticketInfo">
-                    <a href="/artistspages/adele.html"><h2 class="ticketText">Adele</h2></a>
+                    <a href="https://nvnchi.github.io/Virtunes/artistspages/adele.html"><h2 class="ticketText">Adele</h2></a>
                     <p class="ticketText">12/06/2023 at 5 pm.</p>
                 </div>
         </div>
@@ -81,14 +81,14 @@
             <div class="ticket2">
                 <img class="ticketImage2" src="./images/Artists/JVKE.jpg" alt="Picture of JVKE">
                     <div class="ticketInfo">
-                        <a href="/artistspages/jvke.html"><h2 class="ticketText">JVKE</h2></a>
+                        <a href="https://nvnchi.github.io/Virtunes/artistspages/jvke.html"><h2 class="ticketText">JVKE</h2></a>
                         <p class="ticketText">16/06/2023 at 11 am.</p>
                     </div>
                 </div>
             <div class="ticket2">
                 <img class="ticketImage2" src="./images/Artists/Newjeans.jpg" alt="Picture of Newjeans">
                     <div class="ticketInfo">
-                        <a href="/artistspages/newjeans.html"><h2 class="ticketText">Newjeans</h2></a>
+                        <a href="https://nvnchi.github.io/Virtunes/artistspages/newjeans.html"><h2 class="ticketText">Newjeans</h2></a>
                         <p class="ticketText">24/06/2023 at 1 am.</p>
                     </div>
             </div>
