--- a/calendar.html
+++ b/calendar.html
@@ -66,7 +66,7 @@ document.addEventListener('DOMContentLoaded', function() {
     {
       start: '2023-06-24',
       end: '2023-06-24',
-      title: 'Newjeans',
+      title: 'NewJeans',
       display: 'background',
       url: 'https://nvnchi.github.io/Virtunes/artistspages/newjeanspage.html'
     },
@@ -108,7 +108,7 @@ document.addEventListener('DOMContentLoaded', function() {
     {
       start: '2023-06-30',
       end: '2023-06-30',
-      title: 'Anne Marie',
+      title: 'Anne-Marie',
       display: 'background',
       url: 'https://nvnchi.github.io/Virtunes/artistspages/annemariepage.html'
     },
