--- a/artistspages/elliegouldingpage.html
+++ b/artistspages/elliegouldingpage.html
@@ -43,6 +43,16 @@ Ellie Goulding is a British singer-songwriter known for her enchanting vocals an
     <p class="small-btn">Buy a ticket</p>
 
     <h3 class="h3" id="concerts">Scheduled concerts</h3>
+    <div class="concerts">
+        <div class="concert">
+            <div class="date"><p>Jul 28 2023</p></div>
+            <div class="infoConcert"><p>Thu 8:00 PM</p><br><a href="#">Save this concert</a></div>
+        </div>
+        <div class="concert">
+            <div class="date"><p>Jan 18 2024</p></div>
+            <div class="infoConcert"><p>Thu 2:00 PM</p><br><a href="#">Save this concert</a></div>
+        </div>
+    </div>
 
     <h3 class="h3" id="spotify">Listen now on Spotify!</h3>
     <iframe class="spotifyProfile" style="border-radius:12px" src="https://open.spotify.com/embed/artist/0X2BH1fck6amBIoJhDVmmJ?utm_source=generator" width="57%" height="452" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
