--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h1 class="title">Welcome to Vir<span id="t">t</span><span id="u">u</span><span id="n">n</span><span id="e">e</span><span id="s">s</span>!</h1>
         <p class="text">Immerse yourself in the magic of <span id="t">m</span><span id="u">u</span><span id="n">s</span><span id="e">i</span><span id="s">c</span> right from your home.</p>
         <p class="buttonText"><a href="login.html" class="button">Login</a> or <a href="register.html" class="button">join Virtunes</a> today!</p>
+        <p class="buttonText2">Make an account today, or log in on your computer!</p>
     </section>
 
     
