--- a/artistspages/lauvpage.html
+++ b/artistspages/lauvpage.html
@@ -26,7 +26,7 @@
     </div>
 
     <div>
-      <img src="../images/Artists/lauv.jpg" alt="Avatar" class="profile-picture">
+      <img src="../images/Artists/lauv1.jpg" alt="Avatar" class="profile-picture">
         <div class="info">
         <h2 class="full-name">LAUV</h1>
         <p class="genres">
